# anticipatory-action

./: .gitignore  404.html  Dockerfile  README.md  aa-env.yml  accelerate-triggers.py  analytical.py  helper_fns.py  index.html  merge-spi-dryspell-gt-nrt-triggers.py  mkdocs.yml  objects.inv  operational.py  operational_nb.ipynb  pyproject.toml  requirements.txt  triggers-df-vulnerability-sorting.ipynb  triggers.py
.github/workflows/: ci.yml  dev-ci.yml  release-ci.yml
AA/: _triggers_ready_set.py  analytical.py  helper_fns.py  logging_utils.py  merge-spi-dryspell-gt-nrt-triggers.py  operational.py  operational_prism.py  prism.py  select_best_triggers.py  triggers.py  zip-forecasts.sh
AA/cli/: analytical.py  operational.py  triggers.py
AA/helpers/: _triggers.py  params.py  prism.py  select_best_triggers.py  utils.py  validation.py
AA/src/: _triggers.py  prism.py  validation.py
ad-hoc-evaluations/: README.md  evaluate-roc-pycpt.ipynb
ad-hoc-evaluations/blended-chirps/: check-analytical-blended.ipynb  check-analytical-blended.py  check-triggers-blended.ipynb  check-triggers-blended.py
ad-hoc-evaluations/cyclones/: add_blended_data_to_cyclones_df.py
ad-hoc-evaluations/dates-alignment/: compare-activations.ipynb  compare-activations.py  compare-analytical.ipynb  compare-analytical.py  compare-triggers.ipynb  compare-triggers.py
ad-hoc-evaluations/tanzania/: evaluate-roc-checkmoz.py  evaluate-roc-tanzania.py
ad-hoc-evaluations/xclim-scale-bug/: check-fixed-bc-analytical.ipynb
ad-hoc-evaluations/zonal-stats-aggregation/: compare-aggregated-probabilities.ipynb  compare-aggregated-probabilities.py
config/: jor_config.yaml  moz_config.yaml  mwi_config.yaml  params.py  test_config.yaml  tza_config.yaml  zmb_config.yaml  zwe_config.yaml
docs/: index.md  monitoring-process.md
docs/explanation/: overview.md
docs/how-to-guides/: dependencies.md  hdc-credentials.md  jupytext.md  monitoring.md  run-docker.md  run-locally-pixi.md  setup-ssh-github.md  testing-and-linting.md
docs/reference/: analytical.md  configuration.md  environment.md  monitoring-process.md  operational.md  triggers.md  utils.md
docs/tutorials/: getting-started.md  load-forecasts-from-cds.ipynb  run-full-verification.ipynb  run-operational-monitoring.ipynb
explanation/overview/: index.html
floods/: 0_observed_data_exploration.py  1_glofas_reanalysis_station_extraction.ipynb  1_glofas_reanalysis_station_extraction.py  2_glofas_reforecast_station_extraction.ipynb  2_glofas_reforecast_station_extraction.py  3_split_forecasts.ipynb  3_split_forecasts.py  4_merge_station_data.ipynb  4_merge_station_data.py  5_return_period_calculation.ipynb  5_return_period_calculation.py  6_glofas_threshold_calculation.ipynb  6_glofas_threshold_calculation.py  7_flood_aa_preseason.py  7_flood_aa_preseason_walkthrough.ipynb  7_flood_aa_preseason_walkthrough.py  7b_google_flood_aa_preseason_walkthrough.py  GloFAS_download.py  file_conversion.ipynb  flood_aa_preseason.py  flood_aa_preseason_walkthrough.ipynb  glofas_reanalysis_station_extraction.ipynb  glofas_reforecast_station_extraction.ipynb  glofas_threshold_calculation.ipynb  glofas_thresholds.py  grib_to_nc  merge_station_data.ipynb  read_grib.py  return_period_calculation.ipynb  visualising_forecasts.ipynb
floods/google_floods/: GRRR_Google_Runoff_Reanalysis_Reforecast.py
how-to-guides/dependencies/: index.html
how-to-guides/hdc-credentials/: index.html
how-to-guides/jupytext/: index.html
how-to-guides/monitoring/: index.html
how-to-guides/run-docker/: index.html
how-to-guides/run-locally-pixi/: index.html
how-to-guides/setup-ssh-github/: index.html
how-to-guides/testing-and-linting/: index.html
notebooks/: accelerate-triggers.ipynb  evaluate-roc-scores.ipynb  inspect-operational-steps.ipynb  operational_nb.ipynb
notebooks/validation/: check-analytical.ipynb  check-coverage.ipynb  check-operational.ipynb  validation-outcomes.ipynb
reference/analytical/: index.html
reference/configuration/: index.html
reference/environment/: index.html
reference/monitoring-process/: index.html
reference/operational/: index.html
template-eval-nbs/: compare-analytical.ipynb  compare-triggers.ipynb  evaluate-roc-scores.ipynb  inspect-operational-steps.ipynb
templates-evaluation/: README.md  aa-setup-data-prep.py  aa-setup-simulation-nb.ipynb  compare-analytical.py  compare-triggers.py  evaluate-roc-scores.py  inspect-operational-steps.ipynb  inspect-operational-steps.py  run-full-pipeline-and-evaluate.py
tests/: integration-test.py  integration_triggers_ref.csv  test_analytical.py  test_triggers.py  triggers-test.py
training/: README.md  inspect-operational-steps.py  load-forecasts-from-cds.py  run-full-verification.py  run-operational-monitoring.py
tropical-storms/: exploration.py  ftp-server-access.py  methodology-definition.py  methodology-revision.py
validation-nbs/: README.md  check-analytical.ipynb  check-coverage.ipynb  check-operational.ipynb  validation-outcomes.ipynb
(+9 files in other folders)
