[project]
dependencies = []
name = "anticipatory-action"
requires-python = ">= 3.10"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["AA"]

[tool.pixi.workspace]
channels = ["conda-forge", "wfp-ram"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64", "linux-aarch64"]

[tool.pixi.pypi-dependencies]
anticipatory_action = { path = ".", editable = true }

[tool.pixi.dependencies]
python = "3.10.*"
hip-analysis = ">=0.12.0,<0.13"
numpy = "<2.0"
xclim = "0.53.1.*"

[tool.pixi.environments]
test = { features = ["test"], solve-group = "prod" }
default = { features = ["dev", "test"], solve-group = "prod" }
production = { solve-group = "prod" }

[tool.pixi.feature.dev.dependencies]
jupyterlab = "*"
pixi-kernel = "*"
ipykernel = "*"
jupytext = "*"

[tool.pixi.feature.test.dependencies]
pytest = ">=8.3.5,<9"

[dependency-groups]
test = ["pytest"]
