[project]
dependencies = []
name = "anticipatory-action"
requires-python = ">= 3.10"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["AA"]

[tool.pixi.workspace]
channels = ["conda-forge", "wfp-ram"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64", "linux-aarch64"]

[tool.pixi.pypi-dependencies]
anticipatory_action = { path = ".", editable = true }

[tool.pixi.dependencies]
python = "3.10.*"
hip-analysis = ">=0.12.0,<0.13"
numpy = "<2.0"
xclim = "0.53.1.*"

[tool.pixi.environments]
test = { features = ["test"], solve-group = "prod" }
default = { features = ["dev", "test"], solve-group = "prod" }
production = { solve-group = "prod" }

[tool.pixi.feature.dev.dependencies]
jupyterlab = "*"
pixi-kernel = "*"
ipykernel = "*"
jupytext = "*"

[tool.pixi.feature.test.dependencies]
pytest = ">=8.3.5,<9"
ruff = ">=0.11.3,<0.12"

[dependency-groups]
test = ["pytest"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
# Use default rule set to start with https://docs.astral.sh/ruff/configuration/

[tool.ruff.format]
# Use default rule set to start with https://docs.astral.sh/ruff/configuration/

[tool.pixi.tasks.lint-check]
description = "Checks linting and formatting"
cmd = """
pixi run ruff check . &&
pixi run ruff check --select I --fix &&
pixi run ruff format
"""

[tool.pixi.tasks.lint]
description = "Checks and fixes linting and formatting"
cmd = """
pixi run ruff check . --fix &&
pixi run ruff check --select I --fix &&
pixi run ruff format
"""